[gd_scene load_steps=3 format=3 uid="uid://dgsyk3dir5oq7"]

[ext_resource type="Script" uid="uid://r7yij1rcrmgk" path="res://Scenes/drawing.gd" id="1_rx8t3"]
[ext_resource type="PackedScene" uid="uid://dklsd3c3smd2k" path="res://Scenes/star.tscn" id="2_bvgwt"]

[node name="Drawing Stars" type="Node2D"]

[node name="Canvas" type="TextureRect" parent="."]
offset_right = 1154.0
offset_bottom = 639.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1148.0
offset_bottom = 649.0
color = Color(0, 0.05870668, 0.21313196, 1)

[node name="Drawing" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 648.0
script = ExtResource("1_rx8t3")
star_scene = ExtResource("2_bvgwt")

[node name="StarContainer" type="Container" parent="Drawing"]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 642.0

[node name="StarCountLabel" type="Label" parent="Drawing"]
layout_mode = 0
offset_left = 997.0
offset_top = 32.0
offset_right = 1088.0
offset_bottom = 55.0
text = "Stars Left: x"

[node name="ResetButton" type="Button" parent="Drawing"]
layout_mode = 0
offset_left = 978.0
offset_top = 560.0
offset_right = 1062.0
offset_bottom = 591.0
text = "RESET"
